added arialabel to search inoput

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
-    <input type="text" id="search" placeholder="Search You Tube Here">
+    <input aria-label="Search Bar input" type="text" id="search" placeholder="Search You Tube Here">
     <button id="btn" class="btn">Search YouTube</button>
     <p id="verify">What would you like to search?</p>
     <button id='back'>Return to Previous Results</button>
